Sync general improvements from hypemarket
- Rename ConnectedAccount to Identity with direct belongs_to :user
- Add gems: webmock, brakeman, strong_migrations, lograge, nondisposable
- Add WwwRedirect concern and default_authenticated_path helper
- Fix N+1 queries in Organization::Multitenancy with loaded? checks
- Add Flipper feature flags for navbar and search
- Use cache_store for sessions in production (fixes 4KB cookie limit)
- Add flash dismiss button, abstracted sidebar tabs, footer cleanup
- Add admin notification on join requests via Noticed
- Add overmind support in bin/dev
- Add blocked email TLD validation (.ru, .su) and disposable email check
- Add 12 new SVG icons

--- a/app/views/devise/shared/_oauth_links.html.erb
+++ b/app/views/devise/shared/_oauth_links.html.erb
@@ -1,12 +1,12 @@
-<% providers = Rails.application.config.omniauth_providers.select { |p| ConnectedAccount::PROVIDER_CONFIG[p.to_sym]&.dig(:sign_in) == true } %>
+<% providers = Rails.application.config.omniauth_providers.select { |p| Identity.auth_provider?(p) } %>
 
 <% if providers.any? %>
   <% providers.each do |provider| %>
     <%= button_to "/auth/#{provider}",
                   data: { turbo: false },
                   class: "btn btn-outline btn-block" do %>
-      <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
-      <%= t("devise.views.shared.links.sign_in_with", provider: ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name]) %>
+      <%= inline_svg_tag "svg/#{Identity::AUTH_PROVIDERS[provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
+      <%= t("devise.views.shared.links.sign_in_with", provider: Identity::AUTH_PROVIDERS[provider.to_sym][:name]) %>
     <% end %>
   <% end %>
 <% end %>
