--- a/app/views/shared/_sidebar_organization.html.erb
+++ b/app/views/shared/_sidebar_organization.html.erb
@@ -9,23 +9,24 @@
 <%# Org navigation %>
 <nav class="flex-1 overflow-y-auto" aria-label="<%= t("shared.sidebar.org_navigation") %>">
   <ul class="menu [[data-expanded=true]_&]:menu-xl w-full">
-    <%= nav_link t("organizations.show.title"), organization_path(Current.organization), icon: "svg/home.svg", active: [["organizations"], ["show"]] %>
+    <% tabs = organization_tabs %>
+    <% active_tab = organization_active_tab %>
 
-    <%= nav_link t("organizations.dashboard.index.title"), organization_dashboard_path(Current.organization), icon: "svg/chart-bar.svg" %>
+    <% tabs.each do |tab| %>
+      <% next if tab[:condition] == false %>
+      <% next if tab[:key].in?(%i[members settings billing]) %>
 
-    <%= nav_link t("organizations.dashboard.paywalled_page.title"), organization_paywalled_page_path(Current.organization), icon: "🔐" if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-
-    <%= nav_link "Projects", organization_projects_path(Current.organization), icon: "svg/question-mark-circle.svg" if policy(Project).index? %>
+      <%= render_sidebar_tab(tab, active_tab) %>
+    <% end %>
 
     <%# Org management section %>
-    <li class="my-2 border-t border-base-content/10"></li>
+    <% management_tabs = tabs.select { |tab| tab[:key].in?(%i[members settings billing]) && tab[:condition] != false } %>
 
-    <% pending_requests_count = Current.organization.received_join_requests.pending.count %>
-    <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: (pending_requests_count.positive? ? pending_requests_count : nil), active: [["organizations/memberships", "organizations/sent_invitations", "organizations/received_join_requests"], []] %>
-
-    <% if Current.membership.admin? %>
-      <%= nav_link t("organizations.edit.title"), edit_organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["edit"]] %>
-      <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(Current.organization), icon: subscription_status_label(Current.organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+    <% if management_tabs.any? %>
+      <li class="my-2 border-t border-base-content/10"></li>
+      <% management_tabs.each do |tab| %>
+        <%= render_sidebar_tab(tab, active_tab) %>
+      <% end %>
     <% end %>
   </ul>
 </nav>
